game.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow: hidden;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url('./assets/backgrounds/background-snake.jpg');
}

#canvasWrapper {
    position: absolute;
    display: block;

    opacity: 0;
    visibility: hidden;
}

/* Leaderboard Styling */
#leaderboard {
    visibility: hidden;
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;
}

#leaderboard-spinner {
    margin-top: 25px;

    min-width: 50px;
    min-height: 50px;
        
    visibility: hidden;
    background-color: white;
    position: absolute;
    top: 150px;

    animation-name: leaderboard-spinner-anim;
    animation-duration: 2s;
    animation-iteration-count: infinite;
}

@keyframes leaderboard-spinner-anim {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

#leaderboard-spinner:hover {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

#leaderboard-try-again {
    visibility: hidden;

    font-family: 'Press Start 2P';
    text-transform: uppercase;
    color: white;
    font-size: 32px;
    position: absolute;
    top: 150px;
}

.leaderboard-button {
    padding: 20px;
}

#leaderboard-scores {
    background-color: #FFFFFF;
    align-self: stretch;
    /* flex-grow: 1; */
    margin: 0 20px 20px 20px;
    padding: 5px 10px;

    color: #a7191d;
    font-family: 'Press Start 2P';
    text-transform: uppercase;

    visibility: hidden;
    overflow-y: scroll;

    height: 70%;
}

.leaderboard-row, .leaderboard-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-grow: 1;
    min-height: 30px;
    margin: 5px;
}

.leaderboard-row {
    border-bottom: 1px solid darkred;
}

.leaderboard-header {
    color: #a7191d;
    justify-content: center;
}

.num-box {
    flex-grow: 1;
    display: flex;
    max-width: 15%;
}

.name-box {
    flex-grow: 1;
    display: flex;
}

.hiscore-box {
    flex-grow: 1;
    text-align: center;
    /* border-left: 1px dashed lightgrey;
    flex-grow: 1;
    justify-content: center;
    min-width: 35%;
    max-width: 35%;
    display: flex; */
}

.campus-box {
    flex-grow: 1;
    text-align: right;
    /* border-left: 1px dashed lightgrey;
    flex-grow: 1;
    justify-content: flex-end;
    min-width: 35%;
    max-width: 35%;
    display: flex;
    margin-right: 5px; */
}

.leaderboard-row p {
    margin: 0;
}
/*End Leaderboard Styling*/

/* HiScore Styling*/
#hiscoreSubmit {
    background-color: transparent;
    width: 360px;
    height: 520px;
    position: absolute;
    display: flex;

    opacity: 0;
    visibility: hidden;

    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

#hiscoreSubmit #header {
    align-self: flex-start;
}

#hiscoreSubmit #content {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: 1;
    justify-content: space-around;
}

#hiscoreSubmit #score-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#hiscoreSubmit #score-info #playerScore {
    color: gold;
}

#hiscoreSubmit #input-fields {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#hiscoreSubmit input[type=text] {
    width: 50%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    font-family: 'Press Start 2P';
    text-align: center;
    font-size: 24px;
    color: white;
    background-color: darkred;
    border: 1px dashed white;
    outline: none;
    text-transform: uppercase;
}

#hiscoreSubmit p {
    font-family: 'Press Start 2P';
    color: white;
    text-transform: uppercase;
}

#hiscoreSubmit #select-campus {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#hiscoreSubmit #input-buttons {
    margin-top: 25px;
    width: 100%;
    display: flex;
    justify-content: space-around;
}

#hiscoreSubmit select, #hiscoreSubmit select:focus {
    /* styling */
    background-color: darkred;
    border: 1px dashed white;
    border-radius: 0px;
    display: inline-block;
    font-family: 'Press Start 2P';
    color: white;
    font-size: 16px;
    line-height: 1.5em;
    padding: 0.5em 3.5em 0.5em 1em;
    text-transform: uppercase;

    /* reset */

    margin: 0;      
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-appearance: none;
    -moz-appearance: none;

    /* Dash and Caret */
    background-image:
        linear-gradient(45deg, transparent 50%, white 50%),
        linear-gradient(135deg, white 50%, transparent 50%),
        linear-gradient(to right, white, white);
    background-position:
        calc(100% - 20px) calc(1em + 2px),
        calc(100% - 15px) calc(1em + 2px),
        calc(100% - 2.5em) 0.5em;
    background-size:
        5px 5px,
        5px 5px,
        1px 1.5em;
    background-repeat: no-repeat;

    outline: none;
}
/* End HiScore Submit*/

